deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gradeapp
  namespace: default
spec:
  selector:
    app: gradeapp
  ports:
    - port: 8888
      targetPort: 8888
  type: ClusterIP
